0.9.5:

2009-10-03  Daniel Elstner  <daniel.kitta@gmail.com>

	Increment cluttermm API version to 1.0

	* configure.ac (MM_INIT_MODULE): Change the module name from
	cluttermm-0.9 to cluttermm-1.0, following clutter.  Note that this
	does not imply that cluttermm has reached API or ABI stability.

2009-10-02  Daniel Elstner  <danielk@openismus.com>

	Correct bad code pointed out by compiler warnings

	* clutter/src/timeline.{ccg,hg} (Timeline::Timeline): Implement the
	constructor manually, because the parameter names do not match the
	names of the corresponding properties.  Also, adjust the signature to
	the new ClutterTimeline API.
	(Timeline::create): Change signature to match the constructor.
	* clutter/cluttermm/{frame-source,threads}.cc: Add missing inline and
	static keywords, and slightly clean up the code.
	(SourceConnectionNode::notify): Actually return a defined value.
	* examples/test-actors.cc (main), tests/test-alpha-creation.cc (main):
	Adjust for the new Clutter::Timeline::create() API.
	* tests/test-alpha-func.cc (on_alpha): Remove unused parameter name.
	(main): Adapt to Clutter::Timeline::create() API change.

2009-10-02  Daniel Elstner  <danielk@openismus.com>

	Adopt new mm-common build infrastructure

	* build/: Rename directory from scripts/ and delete the obsolete
	M4 macros and build files.
	* codegen/: Rename directory from tools/.
	* codegen/extradefs/: Rename from tools/extra_defs_gen/.
	* codegen/extradefs/generate_extra_defs_clutter.cc: Rename from
	tools/extra_defs_gen/generate_defs_clutter to match the name of
	the executable.
	* doc/: Rename directory from docs/.
	* build_shared/: Delete obsolete build support files.
	* autogen.sh: Replace with minimal script based on autoreconf.
	* configure.ac: Rename from configure.in and rewrite for mm-common.
	* Makefile.am, doc/Makefile.am, examples/Makefile.am,
	clutter/src/Makefile.am, clutter/cluttermm/Makefile.am,
	tests/Makefile.am: Replace with mm-common skeleton build files