@@ -1,32 +1,0 @@
-// -*- c++ -*-
-#ifndef _LIBCLUTTERMM_UTILITY_H
-#define _LIBCLUTTERMM_UTILITY_H
-/*
- * Copyright 2008 Jonathon Jongsma
- *
- * This library is free software; you can redistribute it and/or
- * modify it under the terms of the GNU Lesser General Public
- * License as published by the Free Software Foundation; either
- * version 2.1 of the License, or (at your option) any later version.
- *
- * This library is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- * Lesser General Public License for more details.
- *
- * You should have received a copy of the GNU Lesser General Public
- * License along with this library; if not, write to the Free
- * Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
- */
-
-#include <glibmm.h>
-
-namespace Clutter
-{
-
-int util_next_p2(int a);
-
-} //namespace Clutter
-
-#endif //_LIBCLUTTERMM_UTILITY_H
-
